[BACKLOG-39557] Add opens needed by Analyzer for commons-lang reflectionEquals